# Invoice-Dispute-Resolution-Environment

openevhack/: 00_START_HERE.md  ACTION_REQUIRED.md  CHANGES_SUMMARY.md  CONFIGURATION_COMPLETE.md  Dockerfile  ENVIRONMENT_VARIABLES.md  FINAL_CHECKLIST.md  FINAL_STATUS.md  FIXES_APPLIED.md  HF_CONFIGURATION_FIXED.md  HF_DEPLOYMENT_MASTER_GUIDE.md  HF_DEPLOYMENT_STEPS.md  HF_QUICK_VISUAL_GUIDE.md  HF_SPACES_COMPATIBILITY.md  HF_SPACES_READY.txt  HF_STRUCTURE_VERIFIED.md  HUGGINGFACE_READY.md  INDEX.md  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml  ui.py
openevhack/server/: app.py  environment.py
